add lombok and helper fn, to reduce boilerplate